[package]
name = "unique_port"
version = "0.1.0"
authors = ["Soramitsu Iroha2 team"]
edition = "2018"
repository = "https://github.com/soramitsu/iroha2-unique_port"
description = "Library for getting available ports"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.5.2"
